--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -9,10 +9,13 @@
 
 <body>
     <header>
-        <button class="cart-button" type="button">Корзина</button>
+        <h1 class="title">eShop</h1>
+        <div class="actions">
+            <button class="cart-button" type="button">Корзина</button>
+        </div>
     </header>
     <main>
-        <div class="goods-list "></div>
+        <div class="goods-list"></div>
     </main>
     <script src="script.js"></script>
 </body>
